Tue Mar  9 12:20:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Added CXX_MACHINE

Mon Mar  8 15:36:55 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/mpc.pl:
        * bin/mwc.pl:

          Some platforms have been reported to return undef from
          $FindBin::RealBin.  In this case, fall back on dirname($0).

Mon Mar  8 13:53:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op_GCC_T.inl:
          Fixed gcc warning

Mon Mar  8 08:35:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
          Added specializations for bool/unsigned short/short, is around 7 times
          faster than the default atomic op

Mon Mar  8 08:24:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Added tests for short/unsigned short/bool

Fri Mar  5 14:02:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
          Added test for GCC builtin support

Fri Mar  5 12:40:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
          We did a benchmark on a FC10 64bit system with the GCC builtin support
          for long/unsigned long. In a release/inline build the performance
          results using the GCC builtin support is around 2 times faster than
          when using the ACE assembly version. When we have the GCC builtin support,
          we now also going to use that for long/unsigned long.

Fri Mar  5 12:20:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
        * ace/Atomic_Op_GCC_T.cpp:
        * ace/Atomic_Op_GCC_T.h:
        * ace/Atomic_Op_GCC_T.inl:
          Added new Atomic template for the GCC builtin atomic op support.
          This is used on PPC64/PPC32/IA64 for int/unsigned int/long/unsigned long.