@@ -1,3 +1,11 @@
+Wed Mar 10 10:31:16 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
+
+        * ace/Svc_Handler.cpp:
+        * tests/run_test.lst:
+          Fixed bug#2609 and enabled the test for it. Thanks to Milan
+          Cvetkovic <milan dot cvetkovic at mpathix dot com> for
+          contributing this.
+
 Tue Mar  9 12:20:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/platform_g++_common.GNU:
